--- a/mobile-first/mobile-first.html
+++ b/mobile-first/mobile-first.html
@@ -7,7 +7,7 @@
 <title>Great Idea - Responsive I</title>
 
 <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-<link rel="stylesheet" href="css/index.css">
+<link rel="stylesheet" href="mobile-first.css">
 
 </head>
 
@@ -18,7 +18,7 @@
          <div class="navbar-container">
             <nav>
               <a href="services.html">Services</a>
-              <a href="mobile-first/mobile-first.html">Product</a>
+              <a href="#">Product</a>
               <a href="#">Vision</a>
               <a href="#">Features</a>
               <a href="#">About</a>
@@ -36,7 +36,7 @@
         <h1 class="slogan">Innovation <br> On <br> Demand</h1>
         <button>Get Started</button>
       </div>
-        <img class='header-img' src="./img/header-img.png" alt="Image of a code snippet.">
+        <img class='header-img' src="img/header-img.png" alt="Image of a code snippet.">
 
     </div>
   </header>
@@ -56,7 +56,7 @@
       </div>
     </section>
 
-    <img class="middle-img" src="./img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
     <section class="bottom-content">
 
