Nav borders now extend the whole width of the screen in mobile view

--- a/mobile-first/mobile-first.html
+++ b/mobile-first/mobile-first.html
@@ -4,7 +4,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
-<title>Great Idea - Responsive I</title>
+<title>Great Idea - Responsive I - Mobile First</title>
 
 <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
 <link rel="stylesheet" href="mobile-first.css">
@@ -12,10 +12,25 @@
 </head>
 
 <body>
+
+    <div class="navbar-container">
+       <nav>
+         <a href="services.html">Services</a>
+         <a href="#">Product</a>
+         <a href="#">Vision</a>
+         <a href="#">Features</a>
+         <a href="#">About</a>
+         <a href="#">Contact</a>
+       </nav>
+       <img src="./img/logo.png" alt="">
+
+   </div>
+
     <div class="container">
+
       <header>
 
-         <div class="navbar-container">
+         <!-- <div class="navbar-container">
             <nav>
               <a href="services.html">Services</a>
               <a href="#">Product</a>
@@ -26,7 +41,7 @@
             </nav>
             <img src="./img/logo.png" alt="">
 
-        </div>
+        </div> -->
 
 
 
